--- a/CSS/atividade.css
+++ b/CSS/atividade.css
@@ -5,7 +5,6 @@ background: #FFF5EE;
 
 .atividade__titulo {
     text-align: center;
-    font-size: 2.5rem;
     padding: 1rem 0;
 }
 
@@ -19,13 +18,46 @@ background: #FFF5EE;
 }
 
 .atividade__dia__titulo {
-    font-size: 1.3rem;
     padding: 0 0 1rem 0;
     color: orange;
 }
 
 .atividade__dia__lista {
-    font-size: 1rem;
     padding: 0 0 1rem 1rem;
+}
 
+@media screen and (min-width: 0px ){
+    .atividade__titulo{
+        font-size: 2.5rem;
+    }
+    .atividade__dia__titulo{
+        font-size: 1.3rem;
+    }
+    .atividade__dia__lista {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (min-width: 768px ){
+    .atividade__titulo{
+        font-size: 2.5rem;
+    }
+    .atividade__dia__titulo{
+        font-size: 2rem;
+    }
+    .atividade__dia__lista {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 1024px ){
+    .atividade__titulo{
+        font-size: 3.5rem;
+    }
+    .atividade__dia__titulo{
+        font-size: 2rem;
+    }
+    .atividade__dia__lista {
+        font-size: 1.75rem;
+    }
 }
