--- a/CSS/cabecalho.css
+++ b/CSS/cabecalho.css
@@ -1,7 +1,6 @@
 .cabecalho {
-    align-items: center;
     background: #228B22;
-    flex-direction: column;
+   
 }
 
 .cabecalho__logo {
@@ -12,4 +11,19 @@
 .container {
     display: flex;
     padding: 1.25rem;
+}
+
+@media screen and (min-width: 0px) {
+    .cabecalho {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cabecalho {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
