--- a/CSS/home.css
+++ b/CSS/home.css
@@ -2,7 +2,6 @@
     background-image: url(../imagens/homepag.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 85vw;
     display: flex;    
 }
 .home__imagem {
@@ -19,11 +18,50 @@
 }
 
 .home__titulo {
-    font-size: 3rem;
-    text-shadow: 1px 1px 10px #000000;
+    text-shadow: 0px 0px 10px #000000;
 }
 
 .home__lema {
-    font-size: 2rem;
     font-style: italic;
+    text-shadow: 0px 0px 10px #000000;
+}
+
+@media screen and (min-width: 0px) {
+    .home__titulo {
+        font-size: 3rem;
+    }   
+    .home__lema {
+        font-size: 2rem;
+    }
+
+    .home{
+
+        height: 85vw;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .home__titulo {
+        font-size: 4.5rem;
+    }
+    .home__lema {
+        font-size: 2.5rem;
+    }
+    .home{
+
+        height: 100vh;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .home__titulo {
+        font-size: 6rem;
+    }
+    .home__lema {
+        font-size: 3rem;
+    }
+    .home{
+
+        height: 100vh;
+    }
 }
