--- a/CSS/home2.css
+++ b/CSS/home2.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: space-around;
     padding: 10%;
-    color: #F9f9f9;
+    color: #f4ac0c ;
 }
 
 .home__titulo {
