--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -1,7 +1,3 @@
-.menu {
-    padding-top: 1rem;
-}
-
 .menu__lista {
     flex-wrap: wrap;
     display: flex;
@@ -10,7 +6,6 @@
 }
 
 .menu__item {
-    padding: 1rem .3rem 0.2rem .3rem;
     margin-right: .3rem;
     color: #f9f9f9;
     font-size: 1.25rem;
@@ -30,6 +25,7 @@
     color: orange;
     border-bottom: 2px solid orange ;
     border-radius: 5px;
+    font-size: inherit;
     padding: 1rem .3rem 0.2rem .3rem;
 }
 
@@ -37,3 +33,35 @@
     border:none;
 }
 
+@media screen and (min-width: 0px) {
+    .menu {
+        padding-top: 1rem;
+    } 
+    .menu__item {
+        padding: 1rem .3rem 0.2rem .3rem;
+    }
+
+}
+
+@media screen and (min-width: 768px) {
+    .menu {
+        padding-top: 0;
+    }
+    .menu__item {
+        padding: 1rem .5rem 0.2rem .5rem;
+    }
+
+
+}
+
+@media screen and (min-width: 1024px) {
+    .menu {
+        padding-top: 0;
+    }
+    .menu__item {
+        padding: 1rem .5rem 0.2rem .5rem;
+        font-size: 1.5rem;
+    }
+
+
+}
