--- a/src/styles/home2.css
+++ b/src/styles/home2.css
@@ -1,5 +1,5 @@
 .home {
-    background-image: url(../imagens/homepag.jpg);
+    background-image: url(../assets/homepag.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 85vw;
