--- a/index.css
+++ b/index.css
@@ -1,3 +1,24 @@
+body {
+    background-color: #E6EEE7
+}
+
+.cabecalho {
+    background: #228B22;
+    
+}
+
+.cabecalho__logo {
+    width:40% ;
+    max-width: 100px;
+}
+
+.container {
+    display: flex;
+    padding: 1.25rem;
+}
+
+/* menu */
+
 .menu__lista {
     flex-wrap: wrap;
     display: flex;
@@ -6,9 +27,9 @@
 }
 
 .menu__item {
-    margin-right: .3rem;
     color: #f9f9f9;
     font-size: 1.25rem;
+    border-bottom: 2px solid transparent
 }
 
 .menu__link {
@@ -18,40 +39,58 @@
 
 .ativo {
     border-bottom: 2px solid #f9f9f9 ;
-    border-radius: 5px;
 }
 
 .menu__link:hover {
     color: orange;
     border-bottom: 2px solid orange ;
-    border-radius: 5px;
     font-size: inherit;
-    padding: 1rem .3rem 0.2rem .3rem;
 }
 
-.ativo:hover {
-    border:none;
+/* rodape */
+
+.rodape {
+    background: #228B22;
+    padding: 1rem;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
 }
 
+.rodape__imagem {
+    width: 15%;
+}
+
+.rodape__titulo {
+    font-size: 1rem;
+}
+
+/* Midia */
 @media screen and (min-width: 0px) {
+    .cabecalho {
+        flex-direction: column;
+        align-items: center;
+    }
     .menu {
         padding-top: 1rem;
     } 
     .menu__item {
         padding: 1rem .3rem 0.2rem .3rem;
     }
-
 }
 
 @media screen and (min-width: 768px) {
+    .cabecalho {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
     .menu {
         padding-top: 0;
     }
     .menu__item {
         padding: 1rem .5rem 0.2rem .5rem;
     }
-
-
 }
 
 @media screen and (min-width: 1024px) {
@@ -60,8 +99,9 @@
     }
     .menu__item {
         padding: 1rem .5rem 0.2rem .5rem;
-        font-size: 1.5rem;
+        
     }
 
 
 }
+
